<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DfuActivity">



    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- The size of text below must be fixed, therefore dp are used instead of sp -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dfu_feature_title_long_margin"
            android:rotation="270"
            android:text="@string/dfu_feature_title_long"
            android:textColor="@color/darkGray"
            android:textSize="32dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/feature_device_name_margin_top"
            android:ellipsize="end"
            android:freezesText="true"
            android:maxLines="1"
            android:text="@string/dfu_default_name"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <Button
            android:id="@+id/action_connect"
            style="@style/Widget.Connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin_bottom"

            android:text="@string/action_select"/>

       <!-- <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:src="@drawable/background_title"/>
            -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <!-- Application section -->

            <LinearLayout
                style="@style/Widget.List"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/feature_horizontal_margin"
                android:layout_marginRight="@dimen/feature_horizontal_margin"
                android:layout_marginTop="@dimen/feature_vertical_margin_top"
                android:orientation="vertical">

                <TextView
                    style="@style/Widget.ListTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dfu_section_application_header"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/feature_section_padding">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dfu_file_name_label"/>

                        <TextView
                            android:id="@+id/file_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:ellipsize="middle"
                            android:freezesText="true"
                            android:singleLine="true"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dfu_file_type_label"/>

                        <TextView
                            android:id="@+id/file_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:freezesText="true"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dfu_file_scope_label"/>

                        <TextView
                            android:id="@+id/file_scope"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:freezesText="true"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dfu_file_size_label"/>

                        <TextView
                            android:id="@+id/file_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:freezesText="true"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dfu_file_status_label"/>

                        <TextView
                            android:id="@+id/file_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:freezesText="true"
                            android:text="@string/dfu_file_status_no_file"/>
                    </TableRow>
                </TableLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/feature_section_padding"
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="42dp">

                    <Button
                        android:id="@+id/action_select_file"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/dfu_action_select_file"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"

                        android:src="@drawable/ic_help"/>
                </LinearLayout>
            </LinearLayout>

            <!-- DFU section -->

            <LinearLayout
                android:id="@+id/dfu_pane"
                style="@style/Widget.List"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/feature_horizontal_margin"
                android:layout_marginRight="@dimen/feature_horizontal_margin"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    style="@style/Widget.ListTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dfu_section_dfu_header"/>

                <Button
                    android:id="@+id/action_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/feature_section_padding"
                    android:enabled="false"

                    android:text="@string/dfu_action_upload"/>

                <TextView
                    android:id="@+id/textviewUploading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/feature_section_padding"
                    android:freezesText="true"
                    android:text="@string/dfu_status_uploading"
                    android:visibility="invisible"/>

                <ProgressBar
                    android:id="@+id/progressbar_file"
                    style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/textviewProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/feature_section_padding"
                    android:freezesText="true"
                    android:text="@string/dfu_uploading_percentage_label"
                    android:visibility="invisible"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/feature_horizontal_margin"
                android:layout_gravity="right"
                android:text="@string/dfu_lib_version"
                android:textSize="12sp"/>
        </LinearLayout>


    </RelativeLayout>
</LinearLayout>